- Cured problem with not being able to use global memory operators,
  by defining two more global operators, so that the delete will match
  the debugging implementation.
- Added wxUSE_DEBUG_NEW_ALWAYS so we can distinguish between using
  global memory operators (usually OK) and #defining new to be
  WXDEBUG_NEW (sometimes it might not be OK).
- Added time.cpp to makefile; set wxUSE_DATETIME to 1.
- Added a parent-existance check to popup menu code to make it not crash.
- Added some optimization in wxWindow::SetSize to produce less flicker.
  It remains to be seen whether this produces any resize bugs.

3/12/98
-------

- Debugged DrawEllipticArc (a ! in the wrong place).
- Added SetClippingRegion( const wxRegion& region ).
- Added wxPoint, wxSize, wxRect versions of SetSize etc.
- Diagnosed but not yet cured a wxTreeCtrl bug (see todo.txt).

4/12/98
-------

- Got further with wxTreeCtrl, fixing wxWindow::Refresh on the way,
  and adding Clear(const wxRect&). Mainly the scrolling to sort out now,
  and inter-line spacing.
- Fixed some problems with wxListCtrl espec. trying to call m_mainWin
  functions when it wasn't initialised. As with the wxTreeCtrl sample,
  removed usage of wxTextCtrl as a stream (doesn't seem to agree
  with gcc) and the sample is now partially working. Some work
  on the scrollbars is required.
- wxListCtrl assumed that one of the args to GetClientSize can be NULL:
  corrected.

18/12/98
--------

- Removed major bug whereby dialogs were unmanaged automatically
  when any button was pressed.
- Fixed colours of wxWindow scrollbars, made list and text controls
  have a white background.
- Fixed dialog colour setting.
- Added settable fonts and colours for wxMenu/wxMenuBar. Now
  they have sensible colours by default.
- Fixed a bug in wxStaticBox.
- Controls sample runs, though wxRadioBox doesn't appear and
  the notebook flickers for a while.
- Cured wxTreeCtrl bug: now works pretty well!